@@ -8,3 +8,6 @@
 2016-11-07 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented an RML protocol in 'src/lwnetrouterd/protocol_rml.cpp'
 	and 'src/lwnetrouterd/protocol_rml.h'.
+2016-11-07 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented crosspoint switching in
+	'src/lwnetrouterd/router_hpiaudio.cpp'.
